recursion.cons.occurrences.Occurrences.scala.error
Erreur de compilation :
Occurrences:7: error: not found: value occurences
    return 1+occurences(l.tail, v);
             ^Occurrences:11: error: not found: value occurences
    return occurences(l.tail, v);
           ^